1.2.0  - Added Russian translation (#2)  - Updated translations  - API Changes: Rename some variables to make the code clearer to read